🚀 [#2] Fix GitHub Actions CI workflow and test stability
- Update GitHub Actions workflow to pre-build agent JAR before tests
- Fix ByteHotAgentAttachedTest with robust directory detection for CI/local environments
- Enhance AgentJarBuilder with smart path resolution for multi-module structure
- Make Nix tests disabled by default (enable with -Dnix.tests.enabled=true)
- Fix Java 8 compatibility issues (var keyword → explicit types)
- Resolve all deprecation warnings in bytehot and java-commons modules
- Add Java 8 profile support for backward compatibility

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>